@@ -20,9 +20,13 @@ package org.apache.naming.factory;
 import java.beans.BeanInfo;
 import java.beans.Introspector;
 import java.beans.PropertyDescriptor;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.Enumeration;
+import java.util.HashMap;
 import java.util.Hashtable;
+import java.util.Locale;
+import java.util.Map;
 
 import javax.naming.Context;
 import javax.naming.Name;
@@ -82,7 +86,7 @@ import org.apache.naming.ResourceRef;
  * &lt;/ResourceParams&gt;
  * </pre>
  *
- * @author <a href="mailto:aner at ncstech.com">Aner Perez</a>
+ * @author Aner Perez [aner at ncstech.com]
  */
 public class BeanFactory
     implements ObjectFactory {
@@ -143,21 +147,77 @@ public class BeanFactory
 
                 Object bean = beanClass.newInstance();
 
+                /* Look for properties with explicitly configured setter */
+                RefAddr ra = ref.get("forceString");
+                Map<String, Method> forced = new HashMap<>();
+                String value;
+
+                if (ra != null) {
+                    value = (String)ra.getContent();
+                    Class<?> paramTypes[] = new Class[1];
+                    paramTypes[0] = String.class;
+                    String setterName;
+                    int index;
+
+                    /* Items are given as comma separated list */
+                    for (String param: value.split(",")) {
+                        param = param.trim();
+                        /* A single item can either be of the form name=method
+                         * or just a property name (and we will use a standard
+                         * setter) */
+                        index = param.indexOf('=');
+                        if (index >= 0) {
+                            setterName = param.substring(index + 1).trim();
+                            param = param.substring(0, index).trim();
+                        } else {
+                            setterName = "set" +
+                                         param.substring(0, 1).toUpperCase(Locale.ENGLISH) +
+                                         param.substring(1);
+                        }
+                        try {
+                            forced.put(param,
+                                       beanClass.getMethod(setterName, paramTypes));
+                        } catch (NoSuchMethodException|SecurityException ex) {
+                            throw new NamingException
+                                ("Forced String setter " + setterName +
+                                 " not found for property " + param);
+                        }
+                    }
+                }
+
                 Enumeration<RefAddr> e = ref.getAll();
+
                 while (e.hasMoreElements()) {
 
-                    RefAddr ra = e.nextElement();
+                    ra = e.nextElement();
                     String propName = ra.getType();
 
                     if (propName.equals(Constants.FACTORY) ||
                         propName.equals("scope") || propName.equals("auth") ||
+                        propName.equals("forceString") ||
                         propName.equals("singleton")) {
                         continue;
                     }
 
-                    String value = (String)ra.getContent();
+                    value = (String)ra.getContent();
 
                     Object[] valueArray = new Object[1];
+
+                    /* Shortcut for properties with explicitly configured setter */
+                    Method method = forced.get(propName);
+                    if (method != null) {
+                        valueArray[0] = value;
+                        try {
+                            method.invoke(bean, valueArray);
+                        } catch (IllegalAccessException|
+                                 IllegalArgumentException|
+                                 InvocationTargetException ex) {
+                            throw new NamingException
+                                ("Forced String setter " + method.getName() +
+                                 " threw exception for property " + propName);
+                        }
+                        continue;
+                    }
 
                     int i = 0;
                     for (i = 0; i<pda.length; i++) {
@@ -174,29 +234,30 @@ public class BeanFactory
                                     Character.valueOf(value.charAt(0));
                             } else if (propType.equals(Byte.class)
                                        || propType.equals(byte.class)) {
-                                valueArray[0] = new Byte(value);
+                                valueArray[0] = Byte.valueOf(value);
                             } else if (propType.equals(Short.class)
                                        || propType.equals(short.class)) {
-                                valueArray[0] = new Short(value);
+                                valueArray[0] = Short.valueOf(value);
                             } else if (propType.equals(Integer.class)
                                        || propType.equals(int.class)) {
-                                valueArray[0] = new Integer(value);
+                                valueArray[0] = Integer.valueOf(value);
                             } else if (propType.equals(Long.class)
                                        || propType.equals(long.class)) {
-                                valueArray[0] = new Long(value);
+                                valueArray[0] = Long.valueOf(value);
                             } else if (propType.equals(Float.class)
                                        || propType.equals(float.class)) {
-                                valueArray[0] = new Float(value);
+                                valueArray[0] = Float.valueOf(value);
                             } else if (propType.equals(Double.class)
                                        || propType.equals(double.class)) {
-                                valueArray[0] = new Double(value);
+                                valueArray[0] = Double.valueOf(value);
                             } else if (propType.equals(Boolean.class)
                                        || propType.equals(boolean.class)) {
                                 valueArray[0] = Boolean.valueOf(value);
                             } else {
                                 throw new NamingException
-                                    ("String conversion for property type '"
-                                     + propType.getName() + "' not available");
+                                    ("String conversion for property " + propName +
+                                     " of type '" + propType.getName() +
+                                     "' not available");
                             }
 
                             Method setProp = pda[i].getWriteMethod();
