@@ -59,10 +59,6 @@ import org.apache.tomcat.util.modeler.modules.ModelerSource;
  * This is the main entry point into modeler. It provides methods to create
  * and manipulate model mbeans and simplify their use.
  *
- * Starting with version 1.1, this is no longer a singleton and the static
- * methods are strongly deprecated. In a container environment we can expect
- * different applications to use different registries.
- *
  * This class is itself an mbean.
  *
  * IMPORTANT: public methods not marked with @since x.x are experimental or
@@ -134,9 +130,6 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
      * Factory method to create (if necessary) and return our
      * <code>Registry</code> instance.
      *
-     * Use this method to obtain a Registry - all other static methods
-     * are deprecated and shouldn't be used.
-     *
      * The current version uses a static - future versions could use
      * the thread class loader.
      *
@@ -144,7 +137,7 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
      * loader will be used ( if setUseContextClassLoader is called ) or the
      * default registry is returned.
      * @param guard Prevent access to the registry by untrusted components
-     *
+     * @return the registry
      * @since 1.1
      */
     public static synchronized Registry getRegistry(Object key, Object guard) {
@@ -194,7 +187,8 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
         searchedPaths=new HashMap<>();
     }
 
-    /** Register a bean by creating a modeler mbean and adding it to the
+    /**
+     * Register a bean by creating a modeler mbean and adding it to the
      * MBeanServer.
      *
      * If metadata is not loaded, we'll look up and read a file named
@@ -220,7 +214,7 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
      * @param type The type of the mbean, as declared in mbeans-descriptors. If
      * null, the name of the class will be used. This can be used as a hint or
      * by subclasses.
-     *
+     * @throws Exception if a registration error occurred
      * @since 1.1
      */
     @Override
@@ -230,10 +224,11 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
         registerComponent(bean, new ObjectName(oname), type);
     }
 
-    /** Unregister a component. We'll first check if it is registered,
+    /**
+     * Unregister a component. We'll first check if it is registered,
      * and mask all errors. This is mostly a helper.
      *
-     * @param oname
+     * @param oname Name used for unregistration
      *
      * @since 1.1
      */
@@ -247,13 +242,14 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
     }
 
 
-    /** Invoke a operation on a list of mbeans. Can be used to implement
+    /**
+     * Invoke a operation on a list of mbeans. Can be used to implement
      * lifecycle operations.
      *
      * @param mbeans list of ObjectName on which we'll invoke the operations
      * @param operation  Name of the operation ( init, start, stop, etc)
      * @param failFirst  If false, exceptions will be ignored
-     * @throws Exception
+     * @throws Exception Error invoking operation
      * @since 1.1
      */
     @Override
@@ -284,12 +280,13 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
 
     // -------------------- ID registry --------------------
 
-    /** Return an int ID for faster access. Will be used for notifications
+    /**
+     * Return an int ID for faster access. Will be used for notifications
      * and for other operations we want to optimize.
      *
      * @param domain Namespace
-     * @param name  Type of the notification
-     * @return  An unique id for the domain:name combination
+     * @param name Type of the notification
+     * @return An unique id for the domain:name combination
      * @since 1.1
      */
     @Override
@@ -317,7 +314,7 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
             ids.put( domain, id);
         }
         int code=id[0]++;
-        domainTable.put( name, new Integer( code ));
+        domainTable.put( name, Integer.valueOf( code ));
         return code;
     }
 
@@ -346,6 +343,7 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
      *
      * @param name Name of the managed bean to be returned. Since 1.1, both
      *   short names or the full name of the class can be used.
+     * @return the managed bean
      * @since 1.0
      */
     public ManagedBean findManagedBean(String name) {
@@ -358,10 +356,11 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
 
     // -------------------- Helpers  --------------------
 
-    /** Get the type of an attribute of the object, from the metadata.
+    /**
+     * Get the type of an attribute of the object, from the metadata.
      *
-     * @param oname
-     * @param attName
+     * @param oname The bean name
+     * @param attName The attribute name
      * @return null if metadata about the attribute is not found
      * @since 1.1
      */
@@ -386,10 +385,11 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
         return null;
     }
 
-    /** Find the operation info for a method
+    /**
+     * Find the operation info for a method
      *
-     * @param oname
-     * @param opName
+     * @param oname The bean name
+     * @param opName The operation name
      * @return the operation info for the specified operation
      */
     public MBeanOperationInfo getMethodInfo( ObjectName oname, String opName )
@@ -410,46 +410,52 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
         return null;
     }
 
-    /** Unregister a component. This is just a helper that
+    /**
+     * Unregister a component. This is just a helper that
      * avoids exceptions by checking if the mbean is already registered
      *
-     * @param oname
+     * @param oname The bean name
      */
     public void unregisterComponent( ObjectName oname ) {
         try {
-            if( getMBeanServer().isRegistered(oname)) {
+            if (oname != null && getMBeanServer().isRegistered(oname)) {
                 getMBeanServer().unregisterMBean(oname);
             }
-        } catch( Throwable t ) {
-            log.error( "Error unregistering mbean ", t);
+        } catch (Throwable t) {
+            log.error("Error unregistering mbean", t);
         }
     }
 
     /**
      * Factory method to create (if necessary) and return our
      * <code>MBeanServer</code> instance.
-     *
+     * @return the MBean server
      */
     public synchronized MBeanServer getMBeanServer() {
-        long t1=System.currentTimeMillis();
-
         if (server == null) {
-            if( MBeanServerFactory.findMBeanServer(null).size() > 0 ) {
+            long t1 = System.currentTimeMillis();
+            if (MBeanServerFactory.findMBeanServer(null).size() > 0) {
                 server = MBeanServerFactory.findMBeanServer(null).get(0);
-                if( log.isDebugEnabled() ) {
-                    log.debug("Using existing MBeanServer " + (System.currentTimeMillis() - t1 ));
+                if (log.isDebugEnabled()) {
+                    log.debug("Using existing MBeanServer " + (System.currentTimeMillis() - t1));
                 }
             } else {
                 server = ManagementFactory.getPlatformMBeanServer();
-                if( log.isDebugEnabled() ) {
-                    log.debug("Creating MBeanServer"+ (System.currentTimeMillis() - t1 ));
+                if (log.isDebugEnabled()) {
+                    log.debug("Creating MBeanServer" + (System.currentTimeMillis() - t1));
                 }
             }
         }
-        return (server);
+        return server;
     }
 
-    /** Find or load metadata.
+    /**
+     * Find or load metadata.
+     * @param bean The bean
+     * @param beanClass The bean class
+     * @param type The registry type
+     * @return the managed bean
+     * @throws Exception An error occurred
      */
     public ManagedBean findManagedBean(Object bean, Class<?> beanClass,
             String type) throws Exception {
@@ -496,7 +502,8 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
     }
 
 
-    /** EXPERIMENTAL Convert a string to object, based on type. Used by several
+    /**
+     * EXPERIMENTAL Convert a string to object, based on type. Used by several
      * components. We could provide some pluggability. It is here to keep
      * things consistent and avoid duplication in other tasks
      *
@@ -520,10 +527,10 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
             }
         } else if( "java.lang.Integer".equals( type ) ||
                 "int".equals( type )) {
-            objValue=new Integer( value );
+            objValue=Integer.valueOf( value );
         } else if( "java.lang.Long".equals( type ) ||
                 "long".equals( type )) {
-            objValue=new Long( value );
+            objValue=Long.valueOf( value );
         } else if( "java.lang.Boolean".equals( type ) ||
                 "boolean".equals( type )) {
             objValue=Boolean.valueOf( value );
@@ -531,13 +538,14 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
         return objValue;
     }
 
-    /** Experimental.
+    /**
+     * Experimental. Load descriptors.
      *
-     * @param sourceType
-     * @param source
-     * @param param
+     * @param sourceType The source type
+     * @param source The bean
+     * @param param A type to load
      * @return List of descriptors
-     * @throws Exception
+     * @throws Exception Error loading descriptors
      */
     public List<ObjectName> load( String sourceType, Object source,
             String param) throws Exception {
@@ -586,13 +594,13 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
     }
 
 
-    /** Register a component
-     * XXX make it private
+    /**
+     * Register a component
      *
-     * @param bean
-     * @param oname
-     * @param type
-     * @throws Exception
+     * @param bean The bean
+     * @param oname The object name
+     * @param type The registry type
+     * @throws Exception Error registering component
      */
     public void registerComponent(Object bean, ObjectName oname, String type)
            throws Exception
@@ -630,10 +638,12 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
         }
     }
 
-    /** Lookup the component descriptor in the package and
+    /**
+     * Lookup the component descriptor in the package and
      * in the parent packages.
      *
-     * @param packageName
+     * @param packageName The package name
+     * @param classLoader The class loader
      */
     public void loadDescriptors( String packageName, ClassLoader classLoader  ) {
         String res=packageName.replace( '.', '/');
@@ -662,11 +672,9 @@ public class Registry implements RegistryMBean, MBeanRegistration  {
         }
     }
 
-    /** Lookup the component descriptor in the package and
+    /**
+     * Lookup the component descriptor in the package and
      * in the parent packages.
-     *
-     * @param beanClass
-     * @param type
      */
     private void findDescriptor(Class<?> beanClass, String type) {
         if( type==null ) {
